--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERNAME=rishab@rishabfreelancing
-DB_HOST=rishabfreelancing.mysql.database.azure.com
-DB_PASS=abcd1234@
+DB_USERNAME=YwO9Nx6aoM
+DB_HOST=remotemysql.com
+DB_PASS=ev2BEbmyJy
 cloud_name=djbxbjuvu
 api_key=332967746993917
 api_secret=s6bIQpzAvBkNEitwWe2ne-SN80U
