changed db config

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERNAME=YwO9Nx6aoM
-DB_HOST=remotemysql.com
-DB_PASS=ev2BEbmyJy
+DB_USERNAME=u2adf9t46fcbkhza
+DB_HOST=bwubcratyjbdcrpawv9l-mysql.services.clever-cloud.com
+DB_PASS=kJST6wUWY96VT7C9X0cc
 cloud_name=djbxbjuvu
 api_key=332967746993917
 api_secret=s6bIQpzAvBkNEitwWe2ne-SN80U
